[project]
name = "ena"
version = "1.0.0"
description = "Converts and categorizes transactions into CSVs for Canadian Financial Institutions"
authors = [
    {name = "Ryan Liu"}
]
dependencies = [
    "click>=8.1.2",
    "ollama>=0.2.0",
    "pdfplumber>=0.11.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
